--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
-                                    <h1 class="display-1 text-white mb-5 animated slideInDown">Учебная платформа Фонда
+                                    <h1 style='font-size: 4.5vw;' class="display-1 text-white mb-5 animated slideInDown">Учебная платформа Фонда
                                         Ханнса Зайделя в Центральной Азии</h1>
                                     <a href="baza-znanii.html" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a>
                                 </div>
@@ -265,7 +265,7 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7">
-                                    <h1 class="display-1 text-white mb-5 animated slideInDown">На службе демократии,
+                                    <h1 style='font-size: 4.5vw;' class="display-1 text-white mb-5 animated slideInDown">На службе демократии,
                                         мира и развития</h1>
                                     <!-- <a href="about.html" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a> -->
                                 </div>
@@ -279,7 +279,7 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7">
-                                    <h1 class="display-1 text-white mb-5 animated slideInDown">Повышение
+                                    <h1 style='font-size: 4.5vw;' class="display-1 text-white mb-5 animated slideInDown">Повышение
                                         профессионализма для ключевых лиц ОМСУ</h1>
                                     <!-- <a href="project.html" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a> -->
                                 </div>
