--- a/info2.html
+++ b/info2.html
@@ -79,6 +79,7 @@
       /* Firefox */
       -ms-overflow-style: none;
       /* Internet Explorer 10+ */
+      padding: 0;
     }
 
     .custom-container::-webkit-scrollbar {
@@ -253,17 +254,17 @@
   </div>
   <!-- Page Header End -->
 
-  <div class="custom-container">
-    <a href="info.html">
+  <div class="custom-container container">
+    <a href="info.html" class="col-lg-3">
       <div class="p-2 px-5 bg text-center">Микротренинги</div>
     </a>
-    <a href="info2.html">
+    <a href="info2.html" class="col-lg-3">
       <div class="p-2 bg-primary px-5 text-center text-white">Публикации</div>
     </a>
-    <a href="info3.html">
+    <a href="info3.html" class="col-lg-3">
       <div class="p-2 px-5 bg text-center">Встречи одногруппников</div>
     </a>
-    <a href="info4.html">
+    <a href="info4.html" class="col-lg-3">
       <div class="p-2 px-5 bg text-center">Социальные проекты</div>
     </a>
   </div>
