--- a/info2.html
+++ b/info2.html
@@ -186,7 +186,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <div class="navbar-nav ms-auto p-4 p-lg-0">
-        <a href="index.html" class="nav-item nav-link active">Главная</a>
+        <a href="index.html" class="nav-item nav-link">Главная</a>
         <a href="project.html" class="nav-item nav-link">Стипендии</a>
         <!-- <div class="nav-item dropdown">
                   <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База знаний</a>
@@ -198,7 +198,7 @@
               </div> -->
         <a href="baza-znanii.html" class="nav-item nav-link">База знаний</a>
         <a href="service.html" class="nav-item nav-link">Тренинги</a>
-        <a href="info.html" class="nav-item nav-link">Для выпускников</a>
+        <a href="info.html" class="nav-item nav-link active">Для выпускников</a>
         <a href="QA.html" class="nav-item nav-link">Вопросы и ответы</a>
         <a href="about.html" class="nav-item nav-link">Новости</a>
         <a href="contact.html" class="nav-item nav-link">Контакты</a>
