--- a/QA.html
+++ b/QA.html
@@ -44,6 +44,15 @@
             color: #497bb4;
         }
 
+        /* .accordion-header button {
+            cursor: pointer;
+            pointer-events: none;
+        } */
+
+        /* .accordion-button:hover {
+            cursor: pointer !important;
+        } */
+
         @media (max-width: 1491px) {
             .navbar-collapse {
                 background-color: white;
@@ -270,90 +279,191 @@
             <!--            </div>-->
             <div class="row">
                 <div class="container">
-                    <div class="accordion">
+                    <!-- <div class="accordion accordion-flush" id="accordionFlushExample">
                         <div class="accordion-item">
-                            <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Как айыл
-                                    окмоту создать акционерное общество?</span><span class="icon"
-                                    aria-hidden="true"></span></button>
-                            <div class="accordion-content">
-                                <p style="font-size:17px;">
-
-                                    ОТВЕТ:
-
-                                    Прежде всего необходимо определить собственника объекта незавершенного
+                            <h2 class="accordion-header" id="flush-headingOne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                    aria-controls="flush-collapseOne">
+                                    Как айыл окмоту создать акционерное общество?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">Прежде всего необходимо определить собственника объекта
+                                    незавершенного
                                     строительства. Маловероятно, что орган МСУ имеет документы, подтверждающие право
                                     собственности на данный объект. В соответствии с Правилами государственной
                                     регистрации прав и обременений (ограничений) прав на недвижимое имущество и сделок с
                                     ним, утвержденным постановлением Правительства КР, №49, от 15 февраля 2011 года,
                                     необходимо объект незавершенного строительства зарегистрировать в органах
-                                    Госрегистра.
-                                </p>
+                                    Госрегистра.</div>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">Каков
-                                    порядок присвоения классных чинов административным государственным служащим и
-                                    муниципальным служащим, назначаемым в особом порядке?</span><span class="icon"
-                                    aria-hidden="true"></span></button>
-                            <div class="accordion-content">
-                                <p style="font-size:17px;">Согласно пункту 32 Положения о порядке присвоения, понижения
+                            <h2 class="accordion-header" id="flush-headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                    aria-controls="flush-collapseTwo">
+                                    Каков порядок присвоения классных чинов административным государственным служащим и
+                                    муниципальным служащим, назначаемым в особом порядке?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">Согласно пункту 32 Положения о порядке присвоения, понижения
                                     и лишения классных чинов государственных гражданских служащих и муниципальных
                                     служащих Кыргызской Республики, утверждённого Указом Президента Кыргызской
                                     Республики от 30 декабря 2016 года № 308, лицам, назначаемым в особом порядке
                                     Президентом, Торага Жогорку Кенеша, Премьер-министром, председателем Верховного суда
                                     и председателем Конституционной палаты Верховного суда Кыргызской Республики,
                                     классные чины присваиваются без проведения оценки.
-
-
-
                                     Лицам, назначаемым в соответствии с частями 7 и 8 статьи 24 Закона Кыргызской
                                     Республики «О государственной гражданской службе и муниципальной службе», классные
                                     чины присваиваются по результатам оценки деятельности, порядок которой определяется
-                                    Правительством Кыргызской Республики.</p>
+                                    Правительством Кыргызской Республики.</div>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <button id="accordion-button-3" aria-expanded="false"><span
-                                    class="accordion-title">Правомерны ли действия глав айыл окмоту, которые хотят
+                            <h2 class="accordion-header" id="flush-headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                    aria-controls="flush-collapseThree">
+                                    Правомерны ли действия глав айыл окмоту, которые хотят
                                     «работать со своей командой», по притеснению и увольнению ответственных секретарей и
-                                    других муниципальных служащих?</span><span class="icon"
-                                    aria-hidden="true"></span></button>
-                            <div class="accordion-content">
-                                <p style="font-size:17px;">В соответствии с пунктом 3 статьи 45 Закона Кыргызской
+                                    других муниципальных служащих?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">В соответствии с пунктом 3 статьи 45 Закона Кыргызской
                                     Республики «О государственной гражданской службе и муниципальной службе», смена в
                                     осударственных органах, органах местного самоуправления лиц, занимающих политические
                                     государственные должности, специальные государственные должности и политические
                                     муниципальные должности, не является основанием для освобождения, понижения в
-                                    должности, ротации служащих, занимающих административные должности.</p>
+                                    должности, ротации служащих, занимающих административные должности.</div>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <button id="accordion-button-4" aria-expanded="false"><span
-                                    class="accordion-title">Проводится ли при наложении дисциплинарного взыскания
-                                    служебное расследование?</span><span class="icon"
-                                    aria-hidden="true"></span></button>
-                            <div class="accordion-content">
-                                <p style="font-size:17px;">В соответствии с частью 4 статьи 33 Закона Кыргызской
+                            <h2 class="accordion-header" id="flush-headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                    aria-controls="flush-collapseThree">
+                                    Проводится ли при наложении дисциплинарного взыскания
+                                    служебное расследование?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">В соответствии с частью 4 статьи 33 Закона Кыргызской
                                     Республики «О государственной гражданской службе и муниципальной службе», для
                                     установления или подтверждения факта совершения дисциплинарного проступка может быть
                                     проведено служебное расследование, назначаемое руководителем государственного
                                     органа, органа местного самоуправления, уполномоченным должностным лицом по
                                     собственной инициативе, по представлению комиссии по этике или по инициативе самого
-                                    служащего.</p>
+                                    служащего.</div>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <button id="accordion-button-5" aria-expanded="false"><span class="accordion-title">Каковы
+                            <h2 class="accordion-header" id="flush-headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                    aria-controls="flush-collapseThree">
+                                    Каковы
                                     обязанности руководителя государственного органа, органа местного самоуправления при
-                                    возникновении конфликта интересов?</span><span class="icon"
-                                    aria-hidden="true"></span></button>
-                            <div class="accordion-content">
-                                <p>В соответствии со статьей 43 Закона Кыргызской Республики «О государственной
+                                    возникновении конфликта интересов?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">В соответствии со статьей 43 Закона Кыргызской Республики «О
+                                    государственной
                                     гражданской службе и муниципальной службе», руководитель
                                     государственного органа, органа местного самоуправления обязан принять меры по
                                     предотвращению конфликта интересов, инициировать проведение служебного расследования
                                     при наличии риска возникновения конфликта интересов, по результатам которого принять
-                                    меры по устранению конфликта интересов.</p>
+                                    меры по устранению конфликта интересов.</div>
+                            </div>
+                        </div>
+                    </div> -->
+
+
+
+                    <div class="accordion" id="accordionPanelsStayOpenExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                                    aria-controls="panelsStayOpen-collapseOne" contenteditable="false">
+                                    Как айыл окмоту создать акционерное общество?
+                                </button>
+                            </h2>
+                            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                                aria-labelledby="panelsStayOpen-headingOne">
+                                <div class="accordion-body">
+                                    Прежде всего необходимо определить собственника объекта
+                                    незавершенного
+                                    строительства. Маловероятно, что орган МСУ имеет документы, подтверждающие право
+                                    собственности на данный объект. В соответствии с Правилами государственной
+                                    регистрации прав и обременений (ограничений) прав на недвижимое имущество и
+                                    сделок с
+                                    ним, утвержденным постановлением Правительства КР, №49, от 15 февраля 2011 года,
+                                    необходимо объект незавершенного строительства зарегистрировать в органах
+                                    Госрегистра.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                                    aria-controls="panelsStayOpen-collapseTwo" contenteditable="false">
+                                    Каков порядок присвоения классных чинов административным государственным служащим и
+                                    муниципальным служащим, назначаемым в особом порядке?
+                                </button>
+                            </h2>
+                            <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                                aria-labelledby="panelsStayOpen-headingTwo">
+                                <div class="accordion-body">
+                                    Согласно пункту 32 Положения о порядке присвоения, понижения
+                                    и лишения классных чинов государственных гражданских служащих и муниципальных
+                                    служащих Кыргызской Республики, утверждённого Указом Президента Кыргызской
+                                    Республики от 30 декабря 2016 года № 308, лицам, назначаемым в особом порядке
+                                    Президентом, Торага Жогорку Кенеша, Премьер-министром, председателем Верховного
+                                    суда
+                                    и председателем Конституционной палаты Верховного суда Кыргызской Республики,
+                                    классные чины присваиваются без проведения оценки.
+                                    Лицам, назначаемым в соответствии с частями 7 и 8 статьи 24 Закона Кыргызской
+                                    Республики «О государственной гражданской службе и муниципальной службе»,
+                                    классные
+                                    чины присваиваются по результатам оценки деятельности, порядок которой
+                                    определяется
+                                    Правительством Кыргызской Республики.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                                    aria-controls="panelsStayOpen-collapseThree" contenteditable="false">
+                                    Правомерны ли действия глав айыл окмоту, которые хотят
+                                    «работать со своей командой», по притеснению и увольнению ответственных секретарей и
+                                    других муниципальных служащих?
+                                </button>
+                            </h2>
+                            <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                                aria-labelledby="panelsStayOpen-headingThree">
+                                <div class="accordion-body">
+                                    В соответствии с пунктом 3 статьи 45 Закона Кыргызской
+                                    Республики «О государственной гражданской службе и муниципальной службе», смена
+                                    в
+                                    осударственных органах, органах местного самоуправления лиц, занимающих
+                                    политические
+                                    государственные должности, специальные государственные должности и политические
+                                    муниципальные должности, не является основанием для освобождения, понижения в
+                                    должности, ротации служащих, занимающих административные должности.
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -439,7 +549,8 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Контакты</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> 237 ул. Панфилова Бишкек, Кыргызстан</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> 237 ул. Панфилова Бишкек, Кыргызстан
+                    </p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>0 312 662 486</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i> kirgisistan@hss.de</p>
                     <div class="d-flex pt-2">
