--- a/service.html
+++ b/service.html
@@ -56,6 +56,20 @@
         }
     </style>
 
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="lib/counterup/counterup.min.js"></script>
+    <script src="lib/parallax/parallax.min.js"></script>
+    <script src="lib/isotope/isotope.pkgd.min.js"></script>
+    <script src="lib/lightbox/js/lightbox.min.js"></script>
+
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
 
 </head>
 
@@ -183,9 +197,9 @@
     </div>
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-            </div>
-            <div class="row g-5" style="margin-bottom: 50px;">
+            <!-- <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+            </div> -->
+            <div class="row g-5 row-cols-1 row-cols-lg-3 " style="margin-bottom: 50px;">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item rounded d-flex h-100">
                         <div class="service-img rounded">
@@ -228,8 +242,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row g-5">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item rounded d-flex h-100">
                         <div class="service-img rounded">
@@ -307,10 +319,10 @@
                         <a class="btn btn-link" href="index.html">Главная</a>
                         <a class="btn btn-link" href="about.html">Новости</a>
                         <a class="btn btn-link" href="service.html">Тренинги</a>
-                        <a class="btn btn-link" href="project.html">Стипендиальные Программы</a>
+                        <a class="btn btn-link" href="project.html">Стипендии</a>
                         <a class="btn btn-link" href="QA.html">Вопросы и Ответы</a>
                         <a class="btn btn-link" href="contact.html">Контакты</a>
-                        <a class="btn btn-link" href="info.html">Информация для выпускников</a>
+                        <a class="btn btn-link" href="info.html">Для выпускников</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Контакты</h4>
