--- a/QA.html
+++ b/QA.html
@@ -27,6 +27,8 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
+
+
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -394,7 +396,7 @@
                             <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
-                                    aria-controls="panelsStayOpen-collapseOne" contenteditable="false">
+                                    aria-controls="panelsStayOpen-collapseOne">
                                     Как айыл окмоту создать акционерное общество?
                                 </button>
                             </h2>
@@ -417,7 +419,7 @@
                             <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
-                                    aria-controls="panelsStayOpen-collapseTwo" contenteditable="false">
+                                    aria-controls="panelsStayOpen-collapseTwo">
                                     Каков порядок присвоения классных чинов административным государственным служащим и
                                     муниципальным служащим, назначаемым в особом порядке?
                                 </button>
@@ -446,7 +448,7 @@
                             <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
-                                    aria-controls="panelsStayOpen-collapseThree" contenteditable="false">
+                                    aria-controls="panelsStayOpen-collapseThree">
                                     Правомерны ли действия глав айыл окмоту, которые хотят
                                     «работать со своей командой», по притеснению и увольнению ответственных секретарей и
                                     других муниципальных служащих?
