--- a/index.html
+++ b/index.html
@@ -392,12 +392,11 @@
 
     <!-- Facts Start -->
     <div class="facts">
-        <div class="container-fluid fact my-5 py-5">
+        <div class="container-fluid fact my-5 py-5" data-parallax="scroll" data-image-src="img/carousel-1.jpg">
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.1s">
                         <div>
-
                             <span class="display-4 text-white" data-toggle="counter-up">4000</span>
                             <span class="display-4 text-white fs-1 me-3">+</span>
                         </div>
@@ -412,7 +411,6 @@
                     </div>
                     <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
                         <div>
-
                             <span class="display-4 text-white" data-toggle="counter-up">8</span>
                             <span class="display-4 text-white"></span>
                         </div>
