--- a/magistratura-tadgikistan.html
+++ b/magistratura-tadgikistan.html
@@ -430,12 +430,13 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Меню</h4>
                     <a class="btn btn-link" href="index.html">Главная</a>
-                    <a class="btn btn-link" href="about.html">Новости</a>
+                    <a class="btn btn-link" href="project.html">Стипендии</a>
+                    <a class="btn btn-link" href="baza-znanii.html">База знаний</a>
                     <a class="btn btn-link" href="service.html">Тренинги</a>
-                    <a class="btn btn-link" href="project.html">Стипендиальные Программы</a>
+                    <a class="btn btn-link" href="info.html">Для выпускников</a>
                     <a class="btn btn-link" href="QA.html">Вопросы и Ответы</a>
+                    <a class="btn btn-link" href="about.html">Новости</a>
                     <a class="btn btn-link" href="contact.html">Контакты</a>
-                    <a class="btn btn-link" href="info.html">Информация для выпускников</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Контакты</h4>
