--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
     </style>
 
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
@@ -67,10 +67,10 @@
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/parallax/parallax.min.js"></script>
     <script src="lib/isotope/isotope.pkgd.min.js"></script>
-    <script src="lib/lightbox/js/lightbox.min.js"></script>
+    <script src="lib/lightbox/js/lightbox.min.js"></script> -->
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
 
 </head>
 
@@ -265,10 +265,10 @@
             <div class="row wow fadeInUp" data-wow-delay="0.3s">
                 <div class="col-12 text-center">
                     <ul class="list-inline rounded mb-5" id="portfolio-flters">
-                        <li class="mx-2 active" data-filter="*">All</li>
-                        <li class="mx-2" data-filter=".first">Объявления</li>
+                        <li class="mx-2 active" data-filter="*">Все</li>
+                        <li class="mx-2" data-filter=".second">Объявления</li>
                         <li class="mx-2" data-filter=".second">База Знаний</li>
-                        <li class="mx-2" data-filter=".third">Мероприятия</li>
+                        <li class="mx-2" data-filter=".second">Тренинги</li>
                     </ul>
                 </div>
             </div>
@@ -350,12 +350,13 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Меню</h4>
                     <a class="btn btn-link" href="index.html">Главная</a>
-                    <a class="btn btn-link" href="about.html">Новости</a>
+                    <a class="btn btn-link" href="project.html">Стипендии</a>
+                    <a class="btn btn-link" href="baza-znanii.html">База знаний</a>
                     <a class="btn btn-link" href="service.html">Тренинги</a>
-                    <a class="btn btn-link" href="project.html">Стипендиальные Программы</a>
+                    <a class="btn btn-link" href="info.html">Для выпускников</a>
                     <a class="btn btn-link" href="QA.html">Вопросы и Ответы</a>
+                    <a class="btn btn-link" href="about.html">Новости</a>
                     <a class="btn btn-link" href="contact.html">Контакты</a>
-                    <a class="btn btn-link" href="info.html">Информация для выпускников</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Контакты</h4>
