--- a/academy-tadgikistan.html
+++ b/academy-tadgikistan.html
@@ -231,13 +231,12 @@
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
             <h1 class="display-3 text-white mb-4 animated slideInDown">В Таджикистане</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
+            <!-- <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
                     <li class="breadcrumb-item"><a href="about.html">Новости</a></li>
-                    <!-- <li class="breadcrumb-item active" aria-current="page">Testimonial</li> -->
                 </ol>
-            </nav>
+            </nav> -->
         </div>
     </div>
     <!-- Page Header End -->
