--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                                         <h1 class="display-5 mb-5">Стипендиальные Программы №2</h1>
                                     </div> -->
                             <div class="row g-5">
-                                <div class="col-lg-4 col-md-6">
+                                <div class="col-lg-6 col-md-6">
                                     <div class="service-item rounded d-flex h-100">
                                         <div class="service-img rounded">
                                             <img class="img-fluid" src="img/kazahsztan.jpg" alt="">
@@ -601,7 +601,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-md-6">
+                                <div class="col-lg-6 col-md-6">
                                     <div class="service-item rounded d-flex h-100">
                                         <div class="service-img rounded">
                                             <img class="img-fluid" src="img/kazahsztan.jpg" alt="">
@@ -621,7 +621,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-md-6" data-wow-delay="0.1s">
+                                <!-- <div class="col-lg-4 col-md-6" data-wow-delay="0.1s">
                                     <div class="service-item rounded d-flex h-100">
                                         <div class="service-img rounded">
                                             <img class="img-fluid" src="img/kyrgyzstan.jpg" alt="">
@@ -630,18 +630,9 @@
                                             <h5 class="mb-3">Магистратура в Кыргызстане</h5>
                                             <p class="mb-4">Магистратура в УНПК МУК</p>
                                             <a href="academy-kyrgyzstan.html" class="btn btn-primary plus">+</a>
-                                            <!-- <div class="dropdown">
-                                                <button class="btn btn-primary dropdown-toggle"
-                                                    data-bs-toggle="dropdown">Подробнее</button>
-                                                <div class="dropdown-menu bg-dark m-0 mt-2">
-                                                    <a href="404.html"
-                                                        class="dropdown-item text-white">Магистратура</a>
-                                                    <a href="404.html" class="dropdown-item text-white">72 курсы пов. Кв.</a>
-                                                </div>
-                                            </div> -->
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
